[gd_scene load_steps=16 format=3 uid="uid://bygmop6vopi43"]

[ext_resource type="Texture2D" uid="uid://ddkdwrnkby3ww" path="res://addons/hyh.digression/icons/icon_add.svg" id="1"]
[ext_resource type="Script" path="res://addons/hyh.digression/editor/nodes/EditorChoiceNode.gd" id="2"]
[ext_resource type="StyleBox" uid="uid://xsgb5pkw0muk" path="res://addons/hyh.digression/editor/nodes/styles/choice_node.tres" id="2_028dr"]
[ext_resource type="PackedScene" uid="uid://cmr3aolsr6l35" path="res://addons/hyh.digression/editor/branches/EditorChoiceValue.tscn" id="3"]
[ext_resource type="StyleBox" uid="uid://dr44ikdpnsewh" path="res://addons/hyh.digression/editor/nodes/styles/choice_node_selected.tres" id="3_pqk3a"]
[ext_resource type="PackedScene" uid="uid://c0pw3rdictm2v" path="res://addons/hyh.digression/editor/nodes/EditorGraphNodeBase.tscn" id="4"]
[ext_resource type="StyleBox" uid="uid://b5ma0bjl3xxjm" path="res://addons/hyh.digression/editor/nodes/styles/dialogue_node_titlebar.tres" id="4_0jwpv"]
[ext_resource type="StyleBox" uid="uid://nu4578dkhf2b" path="res://addons/hyh.digression/editor/nodes/styles/dialogue_node_titlebar_selected.tres" id="5_oirud"]
[ext_resource type="StyleBox" uid="uid://q13kdbxbc8nb" path="res://addons/hyh.digression/editor/nodes/styles/control_style_invisible.tres" id="6_8ilf1"]
[ext_resource type="Texture2D" uid="uid://cmpxsjfcm0kpq" path="res://addons/hyh.digression/icons/icon_node_info.svg" id="7_k8avd"]
[ext_resource type="PackedScene" uid="uid://rg4q2rccwgo5" path="res://addons/hyh.digression/editor/controls/properties/CustomPropertiesControl.tscn" id="8_08e3u"]
[ext_resource type="Texture2D" uid="uid://d65jtbo3b07t" path="res://addons/hyh.digression/icons/icon_clear.svg" id="8_pesv0"]
[ext_resource type="PackedScene" uid="uid://co4le7crf047l" path="res://addons/hyh.digression/editor/controls/drag/DragTargetHSeparator.tscn" id="12_g4p45"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kse8j"]
bg_color = Color(0.388235, 0.905882, 0.796078, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.105882, 0.105882, 0.105882, 0.392157)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.490196)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="FontVariation" id="FontVariation_ldvhs"]
variation_embolden = 0.3

[node name="EditorChoiceNode" instance=ExtResource("4")]
offset_right = 511.0
offset_bottom = 787.0
theme_override_constants/separation = 0
theme_override_styles/panel = ExtResource("2_028dr")
theme_override_styles/panel_selected = ExtResource("3_pqk3a")
theme_override_styles/titlebar = ExtResource("4_0jwpv")
theme_override_styles/titlebar_selected = ExtResource("5_oirud")
resizable = true
title = ""
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = true
slot/3/right_type = 0
slot/3/right_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
script = ExtResource("2")

[node name="DialogueMarginContainer" type="MarginContainer" parent="." index="1"]
layout_mode = 2
size_flags_vertical = 3

[node name="Dialogue" type="PanelContainer" parent="DialogueMarginContainer" index="0"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_kse8j")

[node name="DialogueContainer" type="MarginContainer" parent="DialogueMarginContainer/Dialogue" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VerticalLayout" type="VBoxContainer" parent="DialogueMarginContainer/Dialogue/DialogueContainer" index="0"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="DialogueTypeOption" type="OptionButton" parent="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout" index="0"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_ldvhs")
theme_override_styles/focus = ExtResource("6_8ilf1")
theme_override_styles/hover = ExtResource("6_8ilf1")
theme_override_styles/pressed = ExtResource("6_8ilf1")
theme_override_styles/normal = ExtResource("6_8ilf1")
flat = true
selected = 0
fit_to_longest_item = false
item_count = 3
popup/item_0/text = "Dialogue"
popup/item_1/text = "Narration"
popup/item_1/id = 1
popup/item_2/text = "A Really Long Type For Example Purposes"
popup/item_2/id = 2

[node name="CharacterOptionsContainer" type="GridContainer" parent="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout" index="1"]
layout_mode = 2
theme_override_constants/h_separation = 3
theme_override_constants/v_separation = 10
columns = 3

[node name="Label" type="Label" parent="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout/CharacterOptionsContainer" index="0"]
layout_mode = 2
text = "Character:"

[node name="CharacterSelect" type="OptionButton" parent="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout/CharacterOptionsContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = false

[node name="ClearCharacterButton" type="Button" parent="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout/CharacterOptionsContainer" index="2"]
layout_mode = 2
icon = ExtResource("8_pesv0")
flat = true

[node name="Label2" type="Label" parent="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout/CharacterOptionsContainer" index="3"]
layout_mode = 2
text = "Variant:"

[node name="VariantSelect" type="OptionButton" parent="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout/CharacterOptionsContainer" index="4"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = false

[node name="ClearVariantButton" type="Button" parent="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout/CharacterOptionsContainer" index="5"]
layout_mode = 2
icon = ExtResource("8_pesv0")
flat = true

[node name="DialogueTextEdit" type="TextEdit" parent="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout" index="2"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
mouse_default_cursor_shape = 0
theme_override_constants/line_spacing = 8
placeholder_text = "Enter Dialogue Text..."
wrap_mode = 1

[node name="TranslationContainer" type="GridContainer" parent="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout" index="3"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="Label" type="Label" parent="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout/TranslationContainer" index="0"]
layout_mode = 2
text = "Translation Key:"

[node name="TranslationKeyEdit" type="LineEdit" parent="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout/TranslationContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CustomPropertiesControl" parent="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout" index="4" instance=ExtResource("8_08e3u")]
layout_mode = 2
use_restriction = 4

[node name="HeaderContainer" type="MarginContainer" parent="." index="2"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VB" type="VBoxContainer" parent="HeaderContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HorizontalLayout" type="HBoxContainer" parent="HeaderContainer/VB" index="0"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="HeaderContainer/VB/HorizontalLayout" index="0"]
layout_mode = 2
text = "Default"

[node name="TextureRect" type="TextureRect" parent="HeaderContainer/VB/HorizontalLayout" index="1"]
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "This path is followed if none of the choices
are valid due to unmet conditions."
texture = ExtResource("7_k8avd")
stretch_mode = 3

[node name="ShowDialogueForDefaultButton" type="CheckButton" parent="HeaderContainer/VB/HorizontalLayout" index="2"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Indicates if the dialogue should be displayed
if the default route is being taken (i.e. all choices
are invalid)."
text = "Display Dialogue for Default
"
flat = true

[node name="AddBranchButton" type="Button" parent="HeaderContainer/VB/HorizontalLayout" index="3"]
visible = false
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.0
icon = ExtResource("1")
flat = true

[node name="DragTargetHSeparator" parent="HeaderContainer/VB" index="1" instance=ExtResource("12_g4p45")]
layout_mode = 2
accepted_classes = Array[int]([5])
hide_until_hover = false

[node name="ChoiceValue" parent="." index="3" instance=ExtResource("3")]
layout_mode = 2

[node name="ChoiceValue2" parent="." index="4" instance=ExtResource("3")]
layout_mode = 2

[node name="AddChoiceContainer" type="MarginContainer" parent="." index="5"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="AddChoiceButton" type="Button" parent="AddChoiceContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 4
text = "Add Choice"
icon = ExtResource("1")
flat = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="item_selected" from="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout/DialogueTypeOption" to="." method="_on_dialogue_type_option_item_selected"]
[connection signal="item_selected" from="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout/CharacterOptionsContainer/CharacterSelect" to="." method="_on_character_select_item_selected"]
[connection signal="pressed" from="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout/CharacterOptionsContainer/ClearCharacterButton" to="." method="_on_clear_character_button_pressed"]
[connection signal="item_selected" from="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout/CharacterOptionsContainer/VariantSelect" to="." method="_on_variant_select_item_selected"]
[connection signal="pressed" from="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout/CharacterOptionsContainer/ClearVariantButton" to="." method="_on_clear_variant_button_pressed"]
[connection signal="text_changed" from="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout/DialogueTextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="text_changed" from="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout/TranslationContainer/TranslationKeyEdit" to="." method="_on_translation_key_edit_text_changed"]
[connection signal="add_property_requested" from="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout/CustomPropertiesControl" to="." method="_on_custom_properties_control_add_property_requested"]
[connection signal="modified" from="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout/CustomPropertiesControl" to="." method="_on_custom_properties_control_modified"]
[connection signal="remove_property_requested" from="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout/CustomPropertiesControl" to="." method="_on_custom_properties_control_remove_property_requested"]
[connection signal="size_changed" from="DialogueMarginContainer/Dialogue/DialogueContainer/VerticalLayout/CustomPropertiesControl" to="." method="_on_custom_properties_control_size_changed"]
[connection signal="pressed" from="HeaderContainer/VB/HorizontalLayout/AddBranchButton" to="." method="_on_add_branch_button_pressed"]
[connection signal="dropped" from="HeaderContainer/VB/DragTargetHSeparator" to="." method="_on_drag_target_dropped"]
[connection signal="dropped_after" from="ChoiceValue" to="." method="_on_choice_dropped_after"]
[connection signal="modified" from="ChoiceValue" to="." method="_on_branch_modified"]
[connection signal="preparing_to_change_parent" from="ChoiceValue" to="." method="_on_choice_preparing_to_change_parent"]
[connection signal="remove_requested" from="ChoiceValue" to="." method="_on_branch_remove_requested" binds= [0]]
[connection signal="size_changed" from="ChoiceValue" to="." method="_on_branch_size_changed"]
[connection signal="dropped_after" from="ChoiceValue2" to="." method="_on_choice_dropped_after"]
[connection signal="modified" from="ChoiceValue2" to="." method="_on_branch_modified"]
[connection signal="preparing_to_change_parent" from="ChoiceValue2" to="." method="_on_choice_preparing_to_change_parent"]
[connection signal="remove_requested" from="ChoiceValue2" to="." method="_on_branch_remove_requested" binds= [1]]
[connection signal="size_changed" from="ChoiceValue2" to="." method="_on_branch_size_changed"]
[connection signal="pressed" from="AddChoiceContainer/AddChoiceButton" to="." method="_on_add_choice_button_pressed"]
